--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,48 @@ input[type="checkbox" i] {
     opacity: 1;
 }
 
+
+.i-xs {
+    border-radius: 100%;
+    display: inline-block;
+    height: 12px;
+    margin-left: 6px;
+    margin-right: 6px;
+    width: 12px;
+    border: 1.5px solid #777;
+}
+
+.i-s {
+    border-radius: 100%;
+    display: inline-block;
+    height: 16px;
+    margin-left: 0px;
+    margin-right: 6px;
+    width: 16px;
+    border: 1.5px solid #777; 
+}
+
+.i-m {
+    border-radius: 100%;
+    display: inline-block;
+    height: 20px;
+    margin-left: 0px;
+    margin-right: 6px;
+    width: 20px;
+    border: 1.5px solid #777; 
+}
+
+.i-l {
+    border-radius: 100%;
+    display: inline-block;
+    height: 24px;
+    margin-left: 0px;
+    margin-right: 6px;
+    width: 24px;
+    opacity: 1;
+    border: 1.5px solid #777; 
+}
+
  
 
 /* Mobile */ 
