--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ em {
 	width: 100%; 
     height: 100vh;
     padding: 0%;
-    font-family: 'Avenir Next', sans-serif;
+    font-family: "Acto", Helvetica, sans-serif;
 }
 
 #title {
@@ -26,31 +26,6 @@ em {
     z-index: 1000;
     left: 10px;
     top: 10px;
-}
-
-.box-logo {
-    float: left;
-    border-radius: 10px;
-    border: 4px solid #47473e; 
-    width: 50px;
-    height: 50px;
-}
-
-.box-logo-text {
-    position: relative;
-    left: 7px;
-    text-align: center;
-    font-family: 'Avenir Next', sans-serif;
-    font-weight: 500;
-    font-size: 35px;
-    letter-spacing: -3;
-    color: #47473e;
-}
-
-.box-logo-symbol {
-    font-size: 20px;
-    position: relative;
-    bottom: 10px;
 }
 
 .title-text {
@@ -74,14 +49,7 @@ em {
     letter-spacing: 0.2;
     line-height: 1.3;
     color: #47473e;
-}  
-
-#logo {
-    position: absolute;
-    z-index: 1000;
-    left: 10px;
-    top: 10px;
-}
+} 
 
 #active {
 }
@@ -175,58 +143,49 @@ input[type="checkbox" i] {
 }
 
 .legend-label {
+    position: relative;
+    bottom: 2px;
 }
 
 .i {
     border-radius: 10px;
     display: inline-block;
     height: 12px;
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-left: 3px;
+    margin-right: 4px;
     width: 12px;
     opacity: 1;
 }
 
-
-.i-xs {
+.cir {
     border-radius: 100%;
     display: inline-block;
-    height: 12px;
-    margin-left: 6px;
-    margin-right: 6px;
-    width: 12px;
+    margin-right: 2px;
     border: 1.5px solid #777;
 }
 
-.i-s {
-    border-radius: 100%;
-    display: inline-block;
-    height: 16px;
+.xs {
+    height: 8px;
+    width: 8px;
     margin-left: 0px;
-    margin-right: 6px;
-    width: 16px;
-    border: 1.5px solid #777; 
 }
 
-.i-m {
-    border-radius: 100%;
-    display: inline-block;
-    height: 20px;
+.s {
+    height: 12px;
+    width: 12px;
     margin-left: 0px;
-    margin-right: 6px;
-    width: 20px;
-    border: 1.5px solid #777; 
 }
 
-.i-l {
-    border-radius: 100%;
-    display: inline-block;
-    height: 24px;
+.m {
+    height: 18px;
+    width: 18px;
     margin-left: 0px;
-    margin-right: 6px;
-    width: 24px;
-    opacity: 1;
-    border: 1.5px solid #777; 
+}
+
+.l {
+    height: 25px;
+    width: 25px;
+    margin-left: 0px;
 }
 
  
