--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ input[type="checkbox" i] {
     background: rgba(256,256,256,.8);
     border: 0px solid #47473e;
     border-radius: 4px;
-    bottom: 30px;
+    bottom: 10px;
     right: 10px;
     padding: 10px;
     position: absolute;
@@ -201,5 +201,9 @@ input[type="checkbox" i] {
 
     .subtitle {
         display: none;  
+    }
+
+    .leaflet-popup-content-wrapper {
+        max-width: 250px;
     }
 }
