--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,8 @@ body {
     margin: 0px;
 }
 
-h3 {
-    font-weight: 550;
-}
-
 b {
     font-weight: 550;
-}
-
-em {
-    padding-bottom: 5px;
 }
 
 #mainmap {
@@ -21,39 +13,10 @@ em {
     font-family: "Acto", Helvetica, sans-serif;
 }
 
-#title {
-    position: absolute;
-    z-index: 1000;
-    left: 10px;
-    top: 10px;
-}
-
-.title-text {
-    display: inline;
-    font-weight: 500;
-    font-size: 30px;
-    position: relative;
-    left: 9px;
-    top: 0px;
-    color: #47473e;
-    letter-spacing: 0.3;
-}
-
-.subtitle {
-    position: relative;
-    z-index: 1000;
-    left: 80px;
-    top: 48px;
-    font-size: 1.15em;
-    font-weight: 500;
-    letter-spacing: 0.2;
-    line-height: 1.3;
-    color: #47473e;
-} 
-
 #active {
 }
 
+/* 
 .leaflet-control-layers-expanded {
     font-size: 14px;
 }
@@ -63,18 +26,6 @@ em {
     height: 36px !important;
     line-height: 36px !important;
 }
-
-table {
-    text-align: left;
-    font-size: 12px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-}
-
-td { 
-    padding-right: 20px !important;
-}
-
 
 .btn-grey {
     display: inline-block;
@@ -129,6 +80,19 @@ input[type="checkbox" i] {
     box-shadow: none;
     padding: 6px !important;
     font-size: 1.1em;
+}
+
+*/
+
+table {
+    text-align: left;
+    font-size: 12px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+td { 
+    padding-right: 20px !important;
 }
 
 #legend {
@@ -196,11 +160,9 @@ input[type="checkbox" i] {
     margin-left: 0px;
 }
 
- 
-
 /* Mobile */ 
 
-@media (max-height: 480px) { 
+@media (max-height: 350px) { 
     table {
         display: none;
     }
@@ -223,16 +185,6 @@ input[type="checkbox" i] {
 }
 
 @media (max-width: 500px) {
-    .title-text {
-        top: 5px;
-        font-size: 16px;
-        display: flex;
-    }
-
-    .subtitle {
-        display: none;  
-    }
-
     .leaflet-popup-content-wrapper {
         max-width: 250px;
     }
