--- a/css/style.css
+++ b/css/style.css
@@ -87,12 +87,21 @@ input[type="checkbox" i] {
 table {
     text-align: left;
     font-size: 12px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-collapse: collapse;
 }
 
-td { 
-    padding-right: 20px !important;
+tr, td { 
+    padding-right: 10px !important;
+}
+
+tr {
+    border-bottom: solid 1px black;
+}
+
+.no-border {
+    border-bottom: none;
 }
 
 #legend {
@@ -163,14 +172,23 @@ td {
 /* Mobile */ 
 
 @media (max-height: 350px) { 
-    table {
-        display: none;
+    h2 {
+        font-size: 1em;
     }
+
     #legend {
-        font-size: 0.9em;
+        font-size: 9.5px;
     }
     .legend-size-circles {
         padding-left: 5px;
+    }
+
+    .leaflet-popup-content {
+        font-size: 9.5px;
+    }
+
+    table {
+        font-size: 9.5px;
     }
 }
 
