--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,14 @@ tr {
 }
 
 #legend {
-    background: rgba(256,256,256,.8);
+    background: rgba(256,256,256,1);
     border: 0px solid #47473e;
     border-radius: 4px;
     bottom: 10px;
     right: 10px;
     padding: 10px;
     position: absolute;
-    z-index: 5000;
+    z-index: 800;
     font-size: 1.1em;
     box-shadow: 0 1px 5px rgba(0,0,0,0.65);
 }
@@ -99,6 +99,10 @@ tr {
     height: 25px;
     width: 25px;
     margin-left: 0px;
+}
+
+.leaflet-control-layers-list {
+    margin-bottom: 0px;
 }
 
 /* Mobile */ 
