--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ b {
 	width: 100%; 
     height: 100vh;
     padding: 0%;
-    font-family: "Acto", Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
 }
 
 #active {
